--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="assets/css/angular-bootstrap.css">
   <link rel="stylesheet" href="assets/css/datatables-css.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
